--- a/backend-forecast-api/.env
+++ b/backend-forecast-api/.env
@@ -1,3 +1,5 @@
 DATABASE_URL="mysql://dpsp:azure@2022@dpsp.mysql.database.azure.com:3306/dpsp?connection_limit=5"
 
 JWT_SECRET=")XNw`3g>=7P~N7#y"
+
+HG_BRASIL_KEY="d77b0250"
